--- a/utils/.env
+++ b/utils/.env
@@ -1,5 +1,5 @@
-HOST=placeholder
-PORT=placeholder
-USER=placeholder
-PASSWORD=placeholder
-DB_NAME=placeholder
+HOST=ap-southeast-1.cffa655e-246b-4910-bb38-38d762998390.aws.ybdb.io
+PORT=5433
+USER=admin
+PASSWORD=SYl-f5R-0HM69wk1U0FLjLfPd3ziNx
+DB_NAME=yugabyte
