--- a/config.json
+++ b/config.json
@@ -1,1 +1,7 @@
-{"Host":"localhost","Port":"5432","User":"postgres","Password":"postgres","DBName":"postgres"}
+{
+  "Host": "localhost",
+  "Port": "5432",
+  "User": "postgres",
+  "Password": "postgres",
+  "DBName": "postgres"
+}
